Fix tiny border issue on small class. Prevent trimmer moving out of bounds

--- a/public/css/editors.less
+++ b/public/css/editors.less
@@ -768,7 +768,7 @@ textarea {
   &.small {
     background: none;
     border: none;
-    border-radius: 2px;
+    box-shadow: none;
     &:after {
       content: "";
       display: block;
@@ -778,6 +778,7 @@ textarea {
       background: #333;
       width: 6px;
       height: 100%;
+      border-radius: 2px;
     }
     .trimmer-resizable-w {
       left: -4px;
